重写get方式，暂时无法直接用单字母设置日期

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   var date = dateio(new Date);
   console.log(date);
   console.log(date.toString());
-  console.log(date.origin);
+  console.log(date.toDate());
 </script>
-<script src="https://unpkg.com/dayjs@1.8.16/dayjs.min.js"></script>
+<!-- <script src="https://unpkg.com/dayjs@1.8.16/dayjs.min.js"></script> -->
 </html>
