--- a/index.html
+++ b/index.html
@@ -23,5 +23,5 @@
   console.log(date.toString());
   console.log(date.toDate());
 </script>
-<!-- <script src="https://unpkg.com/dayjs@1.8.16/dayjs.min.js"></script> -->
+<script src="https://unpkg.com/dayjs@1.8.16/dayjs.min.js"></script>
 </html>
