--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>文档标题</title>
 </head>
 <body>
-  
+
 </body>
 <script type="module">
   import dateio from './index.js';
@@ -23,5 +23,6 @@
   console.log(date.toString());
   console.log(date.toDate());
 </script>
-<script src="https://unpkg.com/dayjs@1.8.16/dayjs.min.js"></script>
+<script src="https://unpkg.com/dayjs"></script>
+<script src="https://unpkg.com/moment@2.24.0/moment.js"></script>
 </html>
