--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -12,16 +13,18 @@
   <link rel="apple-touch-icon" href="/favicon.png">
   <title>文档标题</title>
 </head>
+
 <body>
-  
+  <script type="module">
+    import dateio from './index.js';
+    window.dateio = dateio;
+    var date = dateio(new Date);
+    console.log(date);
+    console.log(date.toString());
+    console.log(date.valueOf());
+  </script>
+  <script src="https://unpkg.com/dayjs"></script>
+  <script src="https://unpkg.com/moment"></script>
 </body>
-<script type="module">
-  import dateio from './index.js';
-  window.dateio = dateio;
-  var date = dateio(new Date);
-  console.log(date);
-  console.log(date.toString());
-  console.log(date.valueOf());
-</script>
-<script src="https://unpkg.com/dayjs@1.8.16/dayjs.min.js"></script>
+
 </html>
