--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
   console.log(date);
   console.log(date.toString());
   console.log(date.valueOf());
+  const t0 = performance.now();
+  for(let i = 0; i < 10000; i++) {
+    dateio().dayOfYear();
+  }
+  const t1 = performance.now();
+  console.log(`${t1 - t0} ms`);
 </script>
 <script src="https://unpkg.com/dayjs"></script>
 <script src="https://unpkg.com/moment"></script>
